--- a/css/estilos.css
+++ b/css/estilos.css
@@ -192,7 +192,22 @@ section .fa-house-laptop{
     height: 50px;
     font-size: 35px;
 }
+section .fa-school{
+    width: 50px;
+    height: 50px;
+    font-size: 35px;}
 
+    .gris {
+        -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+          filter: grayscale(100%);
+  }
+  .gris:hover {
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter:grayscale(0%);
+  }
+  
+
+    
 /*/ inicio /*/
 
 #inicio {
@@ -220,6 +235,7 @@ section .fa-house-laptop{
     border: solid 1px white;
     font-weight: 600;
 }
+
 
 
 
