--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,6 +90,22 @@ footer .fa-linkedin-in {
     border-radius: 80px;
     margin: 0 8px;
 }
+#proyectos footer .fa-linkedin-in {
+    color: white;
+    background-color: #E20000;
+}
+#sobre-mi footer .fa-linkedin-in {
+    color: white;
+    background-color: #E20000;
+}
+#contacto footer .fa-github {
+    font-size: 30px;
+    color: white;
+}
+
+    #inicio footer .fa-github {
+        font-size: 30px;
+        color: white;}
 
 nav .active {
     border: solid 1px red;
@@ -126,10 +142,6 @@ input, textarea, .btn {
     
 }
 
-.img-fluid {
-    max-width: 100%;
-    height: 210px;
-}
 
 .btn-ver-online {
     background-color: #E20000;
@@ -172,18 +184,14 @@ input, textarea, .btn {
 /*/ sobre mi /*/ 
 
 .img-circle {
-    margin: 1em auto;
+    margin: 1em;
     display: block;
     background-color: white;
     padding: 6px;
     border-radius: 50%;
 }
 
-    
-
-
-
-#sobre-mi .card {
+    #sobre-mi .card {
     height: 182px;
 }
 
@@ -205,6 +213,32 @@ section .fa-school{
       -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
       filter:grayscale(0%);
   }
+
+  #experiencia h2, #experiencia h4 {
+    color: #370A6D;
+  }
+  #experiencia h2, #formacion h2, #cursosdesarrollo h2{
+    font-weight: 400;
+    font-size: 24px;
+}
+#experiencia h3, #formacion h3, #cursosdesarrollo h3{
+    color: rgb(110, 100, 100);
+    font-size: 18px;
+    font-weight: 600;
+}
+#experiencia h4, #formacion h4, #cursosdesarrollo h4{
+    font-size: 17px;
+}
+#experiencia h5, #formacion h5, #cursosdesarrollo h5{
+    font-size: 14px;
+    color: rgb(110, 100, 100);
+
+}
+#formacion h2, h4, #cursosdesarrollo h2, h4{
+    color: red;
+}
+
+
   
 
     
