--- a/css/estilos.css
+++ b/css/estilos.css
@@ -242,6 +242,39 @@ section .fa-school{
     color: red;
 }
 
+#idiomas {
+    background-color: #eee;
+}
+
+#idiomas .card-idioma {
+    border-radius: 15px;
+}
+
+#idiomas .card{
+    background-color: #370A6D;
+    border-radius: 15px;
+    padding: 40px 0;
+}
+
+#idiomas h2{
+    font-size: 16px;
+    font-weight: 600px;
+}
+#idiomas ul{
+    padding: 0px;
+    font-size: 14px;
+    color: #282828;
+    list-style-type: none;}
+
+    #idiomas .fa-teamspeak{
+        font-size: 80px;
+        color: white;
+    }
+    #idiomas .fa-dumbbell{
+        font-size: 80px;
+        color: white;
+    }
+
 
   
 
@@ -279,7 +312,7 @@ section .fa-school{
 
 
 @media (max-width: 750px) {
-    #contacto {
+    #inicio, #contacto {
         background-image: url("../images/fondo-proyectos.png");
         background-size: contain;
         background-repeat: no-repeat;
@@ -288,6 +321,13 @@ section .fa-school{
         background-size: contain;
         background-repeat: no-repeat;
     }
+    #inicio .input-home p {
+        color: #E20000;
+        border: 1px solid #E20000;}
+
+        footer a{
+            color: #E20000;
+        }
 }
 
 
